--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             </div>
         </div>
         <div class="container-fluid" id="fond3">
-            <div class="col-12 col-lg-12" id="carrousel"><!--vidéo de présentation-->
-                <video  autoplay muted loop>
+            <div align="center"class="embed-responsive embed-responsive-16by9" id="carrousel"><!--vidéo de présentation-->
+                <video autoplay muted loop class="embed-responsive-item"> 
                   <source src="./images/dessets.mp4" type="video/mp4">
                 </video>
                 <p>Le carrousel des desserts, une part au choix</p>
